// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationPage should handle empty registration 1`] = `
<body>
  <div>
    <div
      class="ConfirmationPage"
    >
      <h1
        class="ui header"
        data-testid="main-title"
      >
        confirmation.page.title
      </h1>
      <div>
        Total: , reference: 
      </div>
      <h2
        class="ui header"
      >
        confirmation.page.recap.title
      </h2>
      <button
        class="ui green button ConfirmationPage__print"
      >
        confirmation.page.print
      </button>
      <svg
        aria-label="Photo: Zsolt Sarkozi"
        class="LazyImage no-print"
        data-testid="lazyloaded-placeholder"
        height="400"
        viewBox="0 0 1024 1024"
        width="320"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
        />
      </svg>
    </div>
  </div>
</body>
`;

exports[`ConfirmationPage should match the snapshot 1`] = `
<body>
  <div>
    <div
      class="ConfirmationPage"
    >
      <h1
        class="ui header"
        data-testid="main-title"
      >
        confirmation.page.title
      </h1>
      <div>
        Total: 100, reference: TEST-123132
      </div>
      <h2
        class="ui header"
      >
        confirmation.page.recap.title
      </h2>
      <div
        class="ui raised segment OrderRecap"
      >
        <dl
          class="OrderRecap__container"
        >
          <dd
            class="OrderRecap__title"
          >
            register.form.firstName
          </dd>
          <dt
            class="OrderRecap__value"
          >
            foo
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.lastName
          </dd>
          <dt
            class="OrderRecap__value"
          >
            bar
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.club
          </dd>
          <dt
            class="OrderRecap__value"
          >
            GSL
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.address
          </dd>
          <dt
            class="OrderRecap__value"
          >
            <address>
              <div>
                Rue de Lausanne
                 
                5
              </div>
              <div>
                1018
                 
                Lausanne
              </div>
            </address>
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.total
          </dd>
          <dt
            class="OrderRecap__value"
          >
            CHF 
            100
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.breakfast (CHF 10)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.camping (CHF 10)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.dinner (CHF 45)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            4
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.dinnerKid (CHF 20)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.picknick (noprice)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.sleeping (CHF 15)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.vegetarian (CHF 45)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            4
          </dt>
          <dd
            class="OrderRecap__title"
          >
            register.form.counts.vegetarianKid (CHF 20)
          </dd>
          <dt
            class="OrderRecap__value"
          >
            1
          </dt>
        </dl>
      </div>
      <button
        class="ui green button ConfirmationPage__print"
      >
        confirmation.page.print
      </button>
      <svg
        aria-label="Photo: Zsolt Sarkozi"
        class="LazyImage no-print"
        data-testid="lazyloaded-placeholder"
        height="400"
        viewBox="0 0 1024 1024"
        width="320"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d=""
        />
      </svg>
    </div>
  </div>
</body>
`;
